text visibility bugfix

--- a/style.css
+++ b/style.css
@@ -68,7 +68,6 @@ h3 {
   bottom: 0;
   right: 0;
   font-family: "Major Mono Display", monospace;
-  background-color: black;
 }
 .cornertext.left {
   left: 0;
